@@ -69,6 +69,7 @@ end
 function KeyCount:GROUP_ROSTER_UPDATE(event)
     local newMembers = KeyCount.util.findNewGroupMember()
     for _, member in ipairs(newMembers) do
+        print('checking ' .. tostring(member))
         if member then
             KeyCount:ShowMessageNewMember(member)
         end
@@ -131,7 +132,7 @@ function KeyCount:InitSelf()
         table.copy(self.current, KeyCountDB.current)
     end
     local updateMessage =
-    "·Disabled showing previous season again since we are one month into TWW S1·"
+    "·Updated for TWW season 2·"
     C_Timer.After(15, function() KeyCount.util.checkUpdateMessage(updateMessage) end)
     Log("Finished InitSelf")
 end
@@ -502,7 +503,9 @@ function KeyCount:SaveAllPlayers(dungeons)
         msg = msg .. ": " .. amt .. " players added to the database"
         printf(msg, nil, true)
     else
+        print('checking')
         if KeyCount.util.checkIfPrintMessage() then
+            print('true')
             printf(msg, nil, true)
         end
     end
