@@ -1,4 +1,4 @@
-## Interface: 110005
+## Interface: 110100
 ## Title: KeyCount
 ## Author: Vloer
 ## Version: @project-version@
